renamed to warehouse

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-/laboratorio2/nbproject/private/
-/VideoClub/nbproject/private/
+VideoClub/nbproject/private/
+/warehouse/build/
+/warehouse/dist/
+/warehouse/nbproject/private/
