--- a/warehouse/nbproject/project.properties
+++ b/warehouse/nbproject/project.properties
@@ -1,96 +1,72 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.modulepath=\
-    ${run.modulepath}
-debug.test.classpath=\
-    ${run.test.classpath}
-debug.test.modulepath=\
-    ${run.test.modulepath}
-# Files in build.classes.dir which should be excluded from distribution jar
-dist.archive.excludes=
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/laboratorio2.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/laboratorio2
+#Thu Apr 15 22:37:25 CST 2021
 excludes=
-includes=**
-jar.compress=false
-javac.classpath=
-# Space-separated list of extra javac options
-javac.compilerargs=
 javac.deprecation=false
+build.test.results.dir=${build.dir}/test/results
+jlink.additionalparam=
 javac.external.vm=true
-javac.modulepath=
-javac.processormodulepath=
-javac.processorpath=\
-    ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_5.classpath}
-javac.test.modulepath=\
-    ${javac.modulepath}
-javac.test.processorpath=\
-    ${javac.test.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.html5=false
-javadoc.noindex=false
+jlink.additionalmodules=
+run.classpath=${javac.classpath}\:${build.classes.dir}
 javadoc.nonavbar=false
-javadoc.notree=false
-javadoc.private=false
-javadoc.splitindex=true
+javac.test.modulepath=${javac.modulepath}
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+javac.processorpath=${javac.classpath}
+javac.target=1.8
+annotation.processing.processors.list=
+javadoc.noindex=false
+javadoc.html5=false
+javac.processormodulepath=
+javadoc.additionalparam=
+includes=**
+build.classes.dir=${build.dir}/classes
+source.encoding=UTF-8
+javadoc.author=false
+test.src.dir=test
+build.dir=build
+build.test.classes.dir=${build.dir}/test/classes
+platform.active=default_platform
+javac.compilerargs=
+run.modulepath=${javac.modulepath}
+main.class=
+dist.jar=${dist.dir}/laboratorio2.jar
+javac.test.processorpath=${javac.test.classpath}
 javadoc.use=true
+dist.archive.excludes=
+build.sysclasspath=ignore
+debug.test.classpath=${run.test.classpath}
+dist.dir=dist
+build.classes.excludes=**/*.java,**/*.form
+javadoc.encoding=${source.encoding}
+javadoc.splitindex=true
+javac.source=1.8
+javac.modulepath=
+application.vendor=luismarioram99
+junit.selected.version=4
+debug.classpath=${run.classpath}
+run.jvmargs=
+run.test.modulepath=${javac.test.modulepath}
+jar.compress=false
+build.generated.dir=${build.dir}/generated
+javac.test.classpath=${libs.junit_4.classpath}\:${javac.classpath}\:${build.classes.dir}\:${libs.hamcrest.classpath}
+javadoc.private=false
+debug.test.modulepath=${run.test.modulepath}
+annotation.processing.run.all.processors=true
+application.title=laboratorio2
+meta.inf.dir=${src.dir}/META-INF
+annotation.processing.enabled=true
+manifest.file=manifest.mf
+jlink.launcher=true
+dist.javadoc.dir=${dist.dir}/javadoc
+dist.jlink.output=${dist.jlink.dir}/laboratorio2
+debug.modulepath=${run.modulepath}
+src.dir=src
+endorsed.classpath=
+mkdist.disabled=false
+annotation.processing.enabled.in.editor=false
+javac.classpath=
+dist.jlink.dir=${dist.dir}/jlink
+build.generated.sources.dir=${build.dir}/generated-sources
+jlink.launcher.name=laboratorio2
 javadoc.version=false
 javadoc.windowtitle=
-# The jlink additional root modules to resolve
-jlink.additionalmodules=
-# The jlink additional command line parameters
-jlink.additionalparam=
-jlink.launcher=true
-jlink.launcher.name=laboratorio2
-main.class=
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
-platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
-run.modulepath=\
-    ${javac.modulepath}
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-run.test.modulepath=\
-    ${javac.test.modulepath}
-source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+javadoc.notree=false
