Añadir easymock jar al folder

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ VideoClub/nbproject/private/
 /warehouse/build/
 /warehouse/dist/
 /warehouse/nbproject/private/
+/VideoClub/dist/
+/VideoClub/build/
